# example-contracts

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  LICENSE.txt  README.md  run-java-tests.sh
access-control/src/: lib.rs
auction/: Cargo.toml  README.md
auction/src/: lib.rs  tests.rs
conditional-escrow-transfer/: Cargo.toml  README.md
conditional-escrow-transfer/src/: lib.rs
contract-java-test/: .coverage-allowlist.txt  pom.xml
contract-java-test/src/main/resources/: logback-test.xml
contract-java-test/src/test/java/examples/: AccessControlTest.java  ContractBytesLoader.java  DnsTest.java  DnsVotingClientTest.java  MiaGameTest.java  MultiVotingTest.java  NicknameTest.java  OffChainFetchExchangeRateTest.java  OffChainMpcSigningTest.java  OffChainPublishRandomnessTest.java  OffChainSecretSharingClientTest.java  OffChainSecretSharingTest.java  PetitionTest.java  PingTest.java  ProxyTest.java  UpgradableTest.java  VotingTest.java  ZkAsaServiceSecondPriceAuctionTest.java  ZkAverageSalaryTest.java  ZkClassificationTest.java  ZkFileShareTest.java  ZkImmediateOpenTest.java  ZkMultiFunctionalTest.java  ZkSecondPriceAuctionExternalIdsTest.java  ZkSecondPriceAuctionTest.java  ZkStatisticsTest.java  ZkVotingSimpleTest.java
contract-java-test/src/test/resources/: zk-classification-model.json  zk-classification-predictions.txt  zk-classification-test-samples.txt
dex-swap-factory/: Cargo.toml  README.md
dex-swap-factory/src/: deploy.rs  lib.rs  permission.rs
java/: .coverage-allowlist.txt  pom.xml
java-test/: pom.xml
java-test/src/test/java/examples/: AccessControlTest.java  MiaGameTest.java  MultiVotingTest.java  NicknameTest.java  PetitionTest.java  PingTest.java  VotingTest.java  ZkAverageSalaryTest.java  ZkImmediateOpenTest.java  ZkMultiFunctionalTest.java  ZkStatisticsTest.java  ZkVotingSimpleTest.java
liquidity-swap/: Cargo.toml  README.md
liquidity-swap/src/: interact_mpc20.rs  lib.rs  math.rs  tests.rs  token_balances.rs
mia-game/src/: lib.rs  zk_compute.rs
multi-voting/: Cargo.toml  README.md
multi-voting/src/: lib.rs
nft/: Cargo.toml  README.md
nft/src/: lib.rs
nickname/: Cargo.toml
nickname/src/: lib.rs
petition/: Cargo.toml
ping/: Cargo.toml  README.md
rust/: Cargo.toml
rust/access-control/: Cargo.toml  README.md
rust/access-control/src/: lib.rs
rust/dns/: Cargo.toml  README.md
rust/dns-voting-client/: Cargo.toml  README.md
rust/dns-voting-client/src/: lib.rs
rust/dns/src/: lib.rs
rust/mia-game/: Cargo.toml  README.md
rust/mia-game/src/: lib.rs  zk_compute.rs
rust/multi-voting/: Cargo.toml  README.md
rust/multi-voting/src/: lib.rs
rust/nickname/: README.md
rust/nickname/src/: lib.rs
rust/off-chain-fetch-exchange-rate/: Cargo.toml  README.md
rust/off-chain-fetch-exchange-rate/ecb-xml-examples/: 2025-10-21.xml  2025-10-24.xml  2025-11-24.xml
rust/off-chain-fetch-exchange-rate/src/: lib.rs  parsing.rs
rust/off-chain-mpc-signing/: Cargo.toml  README.md
rust/off-chain-mpc-signing/src/: lib.rs  off_chain.rs  replicated_secret_sharing.rs  signing_orchestration.rs  task_queue.rs
rust/off-chain-publish-randomness/: Cargo.toml  README.md
rust/off-chain-publish-randomness/src/: lib.rs  task_queue.rs
rust/off-chain-secret-sharing/: Cargo.toml  README.md
rust/off-chain-secret-sharing/src/: http_router.rs  lib.rs  signatures.rs
rust/off-chain-secret-sharing/tests/: action_parsing.rs
rust/petition/: README.md
rust/ping/: README.md
rust/ping/src/: lib.rs
rust/proxy/: Cargo.toml  README.md
rust/proxy/src/: lib.rs
rust/upgradable-v1/: Cargo.toml  README.md
rust/upgradable-v1/src/: lib.rs
rust/upgradable-v2/: Cargo.toml  README.md
rust/upgradable-v2/src/: lib.rs  upgrade_from.rs
rust/upgradable-v3/: Cargo.toml  README.md
rust/voting/: README.md
rust/zk-as-a-service-second-price-auction/: Cargo.toml  README.md
rust/zk-as-a-service-second-price-auction/src/: contract.rs
rust/zk-average-salary/: README.md
rust/zk-average-salary/src/: contract.rs
rust/zk-classification/: Cargo.toml  README.md
rust/zk-classification/src/: lib.rs  zk_compute.rs
rust/zk-file-share/: Cargo.toml  README.md
rust/zk-file-share/src/: lib.rs
rust/zk-immediate-open/: README.md
rust/zk-immediate-open/src/: lib.rs
rust/zk-multi-functional/: Cargo.toml  README.md
rust/zk-multi-functional/src/: lib.rs  zk_compute.rs
rust/zk-second-price-auction/: Cargo.toml  README.md
rust/zk-second-price-auction-external-ids/: Cargo.toml  README.md
rust/zk-second-price-auction-external-ids/src/: contract.rs  zk_compute.rs
rust/zk-second-price-auction/src/: contract.rs  zk_compute.rs
rust/zk-statistics/: README.md
rust/zk-statistics/src/: lib.rs  zk_compute.rs
rust/zk-struct-open/: README.md
rust/zk-struct-open/src/: lib.rs  zk_compute.rs
rust/zk-voting-simple/: README.md
rust/zk-voting-simple/src/: contract.rs  zk_compute.rs
scripts/: download-shares.sh  upload-proxy-vote.sh  upload-shares.sh
token/: Cargo.toml  README.md
token/src/: lib.rs  test.rs
ts/: .gitignore  README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
ts/src/test/: SecretSharingClient.test.ts  ShamirSecretSharing.test.ts
ts/src/test/examples/: Api.ts  CryptoUtils.ts
voting/: Cargo.toml  README.md
voting/src/: lib.rs
zk-average-salary/: Cargo.toml  README.md
zk-average-salary/src/: contract.rs  zk_compute.rs  zk_test.rs
zk-immediate-open/: Cargo.toml  README.md
zk-immediate-open/src/: lib.rs  zk_compute.rs
zk-liquidity-swap/: Cargo.toml  README.md
zk-liquidity-swap/src/: contract.rs  pairwise_token_balances.rs  tests.rs  token_contract.rs  zk_compute.rs
zk-multi-functional/: Cargo.toml  README.md
zk-multi-functional/src/: lib.rs  zk_compute.rs
zk-second-price-auction/: Cargo.toml  README.md
zk-second-price-auction/src/: contract.rs  zk_compute.rs  zk_test.rs
zk-statistics/: Cargo.toml
zk-struct-open/: Cargo.toml  README.md
zk-struct-open/src/: lib.rs  zk_compute.rs
zk-voting-simple/: Cargo.toml
zk-voting-simple/src/: contract.rs  zk_compute.rs
(+45 files in other folders)
