[workspace]
resolver = "2"

members = [
    "token",
    "voting",
    "auction",
    "conditional-escrow-transfer",
    "liquidity-swap",
    "multi-voting",
    "nft",
    "dex-swap-factory",
    "zk-second-price-auction",
    "zk-struct-open",
    "zk-liquidity-swap",
    "zk-immediate-open",
    "zk-voting-simple",
    "zk-average-salary",
    "zk-multi-functional",
]

[workspace.metadata.partisiablockchain]
cargo-partisia = "4.8.0"
contract-integrationtest = "3.117.0"

[workspace.metadata.zkcompiler]
url = "https://gitlab.com/api/v4/groups/12499775/-/packages/maven/com/partisiablockchain/language/zkcompiler/4.14.0/zkcompiler-4.14.0-jar-with-dependencies.jar"

[workspace.metadata.abi-client]
url = "https://gitlab.com/api/v4/groups/12499775/-/packages/maven/com/partisiablockchain/language/abi-client/4.22.0/abi-client-4.22.0-jar-with-dependencies.jar"


[workspace.dependencies]
pbc_contract_common = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "16.0.1" }
pbc_contract_codegen = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "16.0.1" }
pbc_traits = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "16.0.1" }
pbc_lib = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "16.0.1" }
read_write_rpc_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "16.0.1" }
read_write_state_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "16.0.1" }
create_type_spec_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "16.0.1" }
pbc_zk = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "16.0.1" }
