[workspace]
resolver = "2"

members = [
    "voting",
    "multi-voting",
    "petition",
    "ping",
    "zk-second-price-auction",
    "zk-struct-open",
    "zk-immediate-open",
    "zk-voting-simple",
    "zk-average-salary",
    "zk-multi-functional"
]

[workspace.metadata.partisiablockchain]
cargo-partisia = "4.8.0"

[workspace.metadata.zkcompiler]
url = "https://gitlab.com/api/v4/groups/12499775/-/packages/maven/com/partisiablockchain/language/zkcompiler/4.29.0/zkcompiler-4.29.0-jar-with-dependencies.jar"

[workspace.metadata.abi-client]
url = "https://gitlab.com/api/v4/groups/12499775/-/packages/maven/com/partisiablockchain/language/abi-client/4.33.0/abi-client-4.33.0-jar-with-dependencies.jar"


[workspace.dependencies]
pbc_contract_common = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.8.0" }
pbc_contract_codegen = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.8.0" }
pbc_traits = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.8.0" }
pbc_lib = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.8.0" }
read_write_rpc_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.8.0" }
read_write_state_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.8.0" }
create_type_spec_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.8.0" }
pbc_zk = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.8.0" }
