[package]
name = "zk-voting-simple"
version = "1.13.0"
description = "Example contract for the Partisia Blockchain."
homepage = "https://gitlab.com/partisiablockchain/language/example-contracts"
repository = "https://gitlab.com/partisiablockchain/language/example-contracts"
documentation = "https://gitlab.com/partisiablockchain/language/example-contracts"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"

[features]
abi = ["pbc_contract_common/abi", "pbc_contract_codegen/abi", "pbc_traits/abi", "create_type_spec_derive/abi", "pbc_lib/abi"]
plus_metadata = []

[lib]
path = "src/contract.rs"
crate-type = ['rlib', 'cdylib']

[[test]]
name = "zk_test"
path = "src/zk_test.rs"

[package.metadata.zk]
zk-compute-path = "src/zk_compute.rs"

[dependencies]
pbc_contract_common = { workspace = true }
pbc_traits = { workspace = true }
pbc_lib = { workspace = true }
read_write_rpc_derive = { workspace = true }
read_write_state_derive = { workspace = true }
create_type_spec_derive = { workspace = true }
pbc_contract_codegen = { workspace = true }
pbc_zk = { workspace = true }
